# SIFT-HUNTER

./: .gitignore  LICENSE  README.md  devpost-submission.md  install.sh  pyproject.toml  requirements.txt
agents/: cli.py  llm.py  orchestrator.py  state.py
agents/nodes/: correlator.py  disk_analyst.py  memory_analyst.py  reporter.py  triage.py  verifier.py
agents/prompts/: triage.md  verifier.md
benchmarks/: detect_case.py  evaluate.py  hallucination_benchmark.py  runner.py
benchmarks/cases/: README.md
benchmarks/cases/case001/: README.md  case.json  execution_log.jsonl  ground_truth.json  sample_report.md
benchmarks/cases/case001/evidence/: mft.csv  netscan.csv  prefetch.csv  pslist.csv  registry.csv
benchmarks/cases/cridex-vmem/: PROVENANCE.md  case.json  ground_truth.json
benchmarks/cases/cridex-vmem/evidence/: malfind.csv  netscan.csv  pslist.csv
benchmarks/cases/zeus-vmem/: PROVENANCE.md  case.json  ground_truth.json
benchmarks/cases/zeus-vmem/evidence/: malfind.csv  (+3 more)
benchmarks/results/: evaluation.json
core/: audit.py  confidence.py  evidence_integrity.py  hallucination_detector.py  models.py
demo/: demo_script.md
devpost/: thumbnail.html
docs/: ACCURACY_REPORT.md  ADDING_TOOLS.md  ARCHITECTURE.md  EVALUATION.md  SECURITY.md
mcp_server/: config.py  security.py  server.py
mcp_server/tools/: base.py
mcp_server/tools/disk/: amcache.py  mft.py  prefetch.py  registry.py  shellbags.py  timeline.py  usnjrnl.py
mcp_server/tools/enrichment/: abuseipdb.py  mitre.py  virustotal.py
mcp_server/tools/memory/: credentials.py  network.py  processes.py  volatility.py
mcp_server/tools/reporting/: markdown_report.py  timeline_viz.py
mcp_server/validators/: path_validator.py
scripts/: run_analysis.sh  setup_sift.sh
src/sift_hunter/: __init__.py  __main__.py  cli.py  config.py
src/sift_hunter/agents/: __init__.py  llm.py  orchestrator.py  state.py
src/sift_hunter/core/: audit.py  confidence.py  evidence_integrity.py  exceptions.py  hallucination_detector.py  models.py
src/sift_hunter/mcp_server/: registry.py  server.py
tests/: conftest.py  test_accuracy.py  test_agents.py  test_audit.py  test_benchmark.py  test_case001.py  test_cli.py  test_confidence.py  test_enrichment.py  test_evaluate.py  test_evidence_integrity.py  test_hallucination.py  test_mcp_server.py  test_models.py  test_orchestrator.py  test_report.py  test_report_dedupe.py  test_security.py  test_security_bypass.py  test_security_destructive.py  test_security_injection.py  test_security_path.py  test_security_write.py  test_tool_disk.py  test_tool_memory.py  test_tools.py  test_verifier.py
web/: build.py  index.html
(+31 files in other folders)
