[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sift-hunter"
version = "1.0.0"
description = "Self-correcting Intelligent Forensic Triage & Hunt — Unified Network of Expert Responders"
authors = [{ name = "SIFT-HUNTER Team" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "python-dateutil>=2.9.0",
    "stix2>=3.0.0",
    "mitreattack-python>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
sift-hunter = "agents.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
